# rust_gpu

./: .gitignore  Cargo.toml  checkpoint.md  idea.md  lite-thesis.md  progress.md  setup.md
benches/: ops.rs
crates/tensor-core/: Cargo.toml
crates/tensor-core/src/: lib.rs  shape.rs
crates/tensor-cpu/: Cargo.toml
crates/tensor-cpu/src/: lib.rs  mlp.rs  ops.rs
crates/tensor-wgpu/: Cargo.toml
crates/tensor-wgpu/shaders/: matmul.wgsl  matmul_tiled.wgsl  relu.wgsl
crates/tensor-wgpu/src/: context.rs  kernels.rs  lib.rs  mlp.rs  tensor.rs  timing.rs
crates/tensor-wgpu/src/ops/: add.rs  common.rs  matmul.rs  mod.rs  relu.rs
docs/: benchmarks.md
src/: add.wgsl  context.rs  cpu.rs  lib.rs  main.rs  ops.rs
